--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.4.0",
+    "@radix-ui/react-popover": "^1.1.15",
     "@tanstack/react-query": "^5.84.2",
     "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
     "react": "^19.1.1",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
+    "react-to-print": "^3.1.1",
+    "sonner": "^2.0.7",
     "zod": "^4.0.17"
   },
   "devDependencies": {
@@ -31,6 +38,7 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.0",
     "vite": "^7.1.0"
