--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.8.0",
     "react-to-print": "^3.1.1",
     "sonner": "^2.0.7",
