feat(multitenancy): org routing/guards, providers, tenant header, org store y páginas de onboarding/organizations

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@ VITE_AUTH0_DOMAIN=
 VITE_AUTH0_CLIENT_ID=
 VITE_AUTH0_AUDIENCE=
 VITE_AUTH0_CALLBACK_URL=http://localhost:5173
-VITE_API_BASE_URL=http://localhost:3000
+VITE_API_BASE_URL=http://localhost:4001
 
 # URL pública base para construir enlaces (dev/prod)
 # En dev puedes usar la IP/puerto público que nos compartiste
 # Ejemplo dev:
-VITE_PUBLIC_APP_URL=http://181.123.91.8:4000
+VITE_PUBLIC_APP_URL=http://localhost:4001
