--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ VITE_AUTH0_CLIENT_ID=
 VITE_AUTH0_AUDIENCE=
 VITE_AUTH0_CALLBACK_URL=http://localhost:5173
 VITE_API_BASE_URL=http://localhost:4001
+VITE_FILES_BASE_URL=http://localhost:3000
 
 # URL pública base para construir enlaces (dev/prod)
 # En dev puedes usar la IP/puerto público que nos compartiste
