Add Docker Compose and Vite env config support
Introduces a docker-compose.yml for local development with Postgres, backend, and frontend services. Updates .env.example to include Vite dev server port and HMR host variables. Refactors vite.config.ts to read port and HMR host from environment variables for improved configurability.

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,9 @@ VITE_FILES_BASE_URL=http://localhost:3000
 # En dev puedes usar la IP/puerto público que nos compartiste
 # Ejemplo dev:
 VITE_PUBLIC_APP_URL=http://localhost:4001
+
+# Desarrollo Vite (puerto/host configurables)
+# Puerto para el dev server (default 5175)
+VITE_PORT=5175
+# Host para HMR (default localhost). Útil si accedes desde otra máquina/IP.
+VITE_HMR_HOST=localhost
