--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5174",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -13,6 +13,7 @@
     "@auth0/auth0-react": "^2.4.0",
     "@radix-ui/react-popover": "^1.1.15",
     "@tanstack/react-query": "^5.84.2",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
