--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.8.0",
     "react-to-print": "^3.1.1",
+    "recharts": "^3.2.1",
     "sonner": "^2.0.7",
     "zod": "^4.0.17",
     "zustand": "^5.0.8"
