--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@tanstack/react-query": "^5.84.2",
     "@tanstack/react-table": "^8.21.3",
+    "@uppy/core": "^5.0.2",
+    "@uppy/dashboard": "^5.0.2",
+    "@uppy/drag-drop": "^5.0.2",
+    "@uppy/react": "^5.1.0",
+    "@uppy/xhr-upload": "^5.0.1",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
