--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.4.0",
+    "@headlessui/react": "^2.2.9",
     "@radix-ui/react-popover": "^1.1.15",
     "@tanstack/react-query": "^5.84.2",
     "@tanstack/react-table": "^8.21.3",
@@ -23,6 +24,7 @@
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
+    "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
