--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --port 5174",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview --port 5173"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.4.0",
