--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-number-format": "^5.4.4",
     "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.8.0",
     "react-to-print": "^3.1.1",
